# page-emotion

./: pyproject.toml
config/: settings.py  urls.py
emotion_analysis/: admin.py  apps.py  models.py  urls.py  utils.py  views.py
emotion_analysis/migrations/: 0001_initial.py
emotion_analysis/templates/: comments.html  index.html
